--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
@@ -11,14 +11,14 @@
       image_tag: "{{ authentik_image_tag }}"
     - image: "{{ authentik_postgres_image }}"
       image_tag: "{{ authentik_postgres_image_tag }}"
-    - image: "{{ authentik_redis_image }}"
-      image_tag: "{{ authentik_redis_image_tag }}"
 
 - name: Create network
   containers.podman.podman_network:
     name: "{{ authentik_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -39,8 +39,6 @@
       options: "{{ authentik_volume_templates_options | default(omit) }}"
     - name: "{{ authentik_postgres_volume_data }}"
       options: "{{ authentik_postgres_volume_data_options | default(omit) }}"
-    - name: "{{ authentik_redis_volume_data }}"
-      options: "{{ authentik_redis_volume_data_options | default(omit) }}"
 
 - name: Create secrets
   containers.podman.podman_secret:
@@ -76,37 +74,13 @@
   notify: Restart postgres for {{ authentik_name }}
   become: true
 
-- name: Create redis container
-  containers.podman.podman_container:
-    name: "{{ authentik_name }}-redis"
-    image: "{{ authentik_redis_image }}:{{ authentik_redis_image_tag }}"
-    network: "{{ authentik_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(authentik_redis_env_vars_base, recursive=True)
-      | combine(authentik_redis_env_vars, recursive=True) }}
-    secrets: >-
-      {{ authentik_redis_container_secrets_base
-      + authentik_redis_container_secrets }}
-    volumes:
-      - "{{ authentik_redis_volume_data }}.volume:/data"
-    healthcheck_interval: 30s
-    healthcheck_retries: 5
-    healthcheck_start_period: 20s
-    healthcheck_timeout: 3s
-    healthcheck: CMD-SHELL redis-cli ping | grep PONG
-    labels: "{{ authentik_redis_container_labels_base | combine(authentik_redis_container_labels, recursive=True) }}"
-    quadlet_file_mode: "0600"
-    quadlet_options: "{{ authentik_redis_quadlet_options_base + authentik_redis_quadlet_options }}"
-    state: quadlet
-  notify: Restart redis for {{ authentik_name }}
-  become: true
-
 - name: Create server container
   containers.podman.podman_container:
     name: "{{ authentik_name }}-server"
     image: "{{ authentik_image }}:{{ authentik_image_tag }}"
-    network: "{{ authentik_name }}.network"
+    network:
+      - "{{ authentik_name }}.network"
+      - "{{ authentik_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: >-
       {{ common_env_vars_base
       | combine(authentik_env_vars_base, recursive=True)
