Add additional traefik variables to common
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/common/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/common/defaults/main.yml
@@ -3,3 +3,6 @@
 
 common_traefik_domain: podman.localhost
 common_traefik_entrypoint: websecure
+common_traefik_network: "{{ traefik_name | default('traefik') }}"
+
+common_traefik_volume_dynamic: "{{ traefik_name | default('traefik') }}-dynamic"
