--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/tasks/main.yml
@@ -17,6 +17,8 @@
     name: "{{ changedetection_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -65,7 +67,9 @@
   containers.podman.podman_container:
     name: "{{ changedetection_name }}"
     image: "{{ changedetection_image }}:{{ changedetection_image_tag }}"
-    network: "{{ changedetection_name }}.network"
+    network:
+      - "{{ changedetection_name }}.network"
+      - "{{ changedetection_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: >-
       {{ common_env_vars_base
       | combine(changedetection_env_vars_base, recursive=True)
