--- a/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/defaults/main.yml
@@ -7,9 +7,12 @@ n8n_image: docker.n8n.io/n8nio/n8n
 n8n_image_tag: latest
 n8n_postgres_image: docker.io/library/postgres
 n8n_postgres_image_tag: "16"
+n8n_redis_image: docker.io/library/redis
+n8n_redis_image_tag: "6"
 
 n8n_volume_data: "{{ n8n_name }}-data"
 n8n_postgres_volume_data: "{{ n8n_name }}-postgres-data"
+n8n_redis_volume_data: "{{ n8n_name }}-redis-data"
 
 n8n_traefik_enable: true
 n8n_traefik_host: "{{ n8n_name }}.{{ common_traefik_domain }}"
@@ -17,14 +20,24 @@ n8n_ports:
   - 5678:5678
 
 n8n_env_vars: {}
+n8n_worker_env_vars: {}
 n8n_postgres_env_vars: {}
+n8n_redis_env_vars: {}
 
 n8n_secrets: {}
 n8n_container_secrets: []
+n8n_worker_container_secrets: []
 n8n_postgres_container_secrets: []
+n8n_redis_container_secrets: []
 
 n8n_container_labels: {}
+n8n_worker_container_labels: {}
 n8n_postgres_container_labels: {}
+n8n_redis_container_labels: {}
 
 n8n_quadlet_options: []
+n8n_worker_quadlet_options: []
 n8n_postgres_quadlet_options: []
+n8n_redis_quadlet_options: []
+
+n8n_url: https://{{ n8n_traefik_host }}
