--- a/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/tasks/main.yml
@@ -15,6 +15,8 @@
     name: "{{ homarr_name }}"
     driver: bridge
     disable_dns: false
+    opt:
+      isolate: "true"
     quadlet_file_mode: "0600"
     state: quadlet
   become: true
@@ -36,13 +38,16 @@
     data: "{{ item.value }}"
     state: present
   become: true
+  no_log: true
   loop: "{{ homarr_secrets_base | combine(homarr_secrets, recursive=True) | dict2items }}"
 
 - name: Create homarr container
   containers.podman.podman_container:
     name: "{{ homarr_name }}"
     image: "{{ homarr_image }}:{{ homarr_image_tag }}"
-    network: "{{ homarr_name }}.network"
+    network:
+      - "{{ homarr_name }}.network"
+      - "{{ homarr_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
     env: >-
       {{ common_env_vars_base
       | combine(homarr_env_vars_base, recursive=True)
