--- a/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
@@ -23,3 +23,4 @@ healthchecks_container_labels: {}
 healthchecks_quadlet_options: []
 
 healthchecks_site_name: Healthchecks
+healthchecks_url: https://{{ healthchecks_traefik_host }}
