Improve networking and traefik integration for archiveium
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/defaults/main.yml
@@ -56,3 +56,5 @@ archiveium_postgres_quadlet_options: []
 archiveium_minio_quadlet_options: []
 archiveium_redis_quadlet_options: []
 archiveium_meilisearch_quadlet_options: []
+
+archiveium_url: https://{{ archiveium_traefik_host }}
