Add ansible.utils collection requirement
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ansible-core~=2.19.0",
     "bitwarden-sdk~=1.0.0",
     "jmespath~=1.0.0",
+    "netaddr~=1.3.0",
 ]
 
 [tool.poetry]
