--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,6 +2,9 @@ collections:
   - name: ansible.posix
     version: ">=2.0,<2.1"
 
+  - name: ansible.utils
+    version: ">=6.0,<7"
+
   - name: bitwarden.secrets
     version: ">=1.0,<1.1"
 
