Add common traefik domain
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/inventory/host_vars/apps.yml
+++ b/inventory/host_vars/apps.yml
@@ -1,5 +1,7 @@
 ---
 
+common_traefik_domain: "{{ lookup('bitwarden.secrets.lookup', bws_uuid.apps_common_traefik_domain) }}"
+
 ###############################################################################
 # authentik
 ###############################################################################
